--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,11 @@
 version: '3.8'
 services:
   server:
-    image: node:12-alpine
+    image: customizedimg/httpd-server:v1
     ports:
       - '8080:80'
-    volumes:
-      - ./server:/root/server
-    env_file:
-      - ./deploy/server.env
-    entrypoint: sh /root/server/start_server.sh
-  frontend:
+
+  nginx-container:
     build:
       context: ./deploy
       dockerfile: Dockerfile
