--- a/deploy/default.conf
+++ b/deploy/default.conf
@@ -46,17 +46,18 @@ server {
         server_name domain.com www.domain.com;
 
         location / {
-            root /var/www/html;
-            try_files $uri /index.html;
+            #root /var/www/html;
+            #try_files $uri /index.html;
             #try_files $uri $uri/ /index.html;
+            proxy_pass http://server/;
         }
 
-        location /api/ {
+        #location /api/ {
             # First attempt to serve request as file, then
             # as directory, then fall back to displaying a 404.
             # try_files $uri $uri/ =404;
-            proxy_pass http://server/api/;
-        }
+            #proxy_pass http://server/api/;
+       # }
 
         # pass PHP scripts to FastCGI server
         #
