--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - '8080:80'
 
-  nginx-container:
+  nginx-proxy:
     build:
       context: ./deploy
       dockerfile: Dockerfile
